committing specific version numbers to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-dotenv
-langchain
-langchain-ollama
-langgraph
+langchain==0.3.20
+langchain-ollama==0.2.3
+langgraph==0.3.5
+python-dotenv==1.0.1
+wikipedia-api==0.8.1
