--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ langchain-ollama==0.2.3
 langgraph==0.3.5
 python-dotenv==1.0.1
 wikipedia-api==0.8.1
+requests~=2.32.3
+typeguard~=4.4.2
+langchain-core~=0.3.45
+langsmith~=0.3.15
