--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,10 +49,19 @@ services:
       context: ./core
       dockerfile: Dockerfile
     restart: always
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      - DB_HOST=${DB_HOST:-db}
+      - DB_NAME=${DB_NAME:-fakenews_db}
+      - DB_USER=${DB_USER:-fakenews_user}
+      - DB_PASSWORD=${DB_PASSWORD:-password}
     ports:
       - "8001:8000"
     volumes:
       - ./core:/app
+    command: sh -c "pip install -r requirements.txt && python app.py"
 
 volumes:
   mysql_data:
