This commit accomplishes 2 things: 1) Adds setup.py which makes core/ and its submodules installable. The problem is that core/ has lots of relative imports (agents->agents, agents->tools, etc.) and tests/ has to import agents. Previously, we accomplished these imports by resolving the project root dir and adding it to syspath. However, this doesn't work inside the docker containers consistently. So using setup.py we can run pip install -e . from root, and then anywhere in the project we can import core.*, and the imports still work inside the containers.
2) Creates tests/evaluation dir for academic datasets and creates a notebook that sends FEVER 2 examples to newsagent. So we have most of the code we need to formally evaluate newsagent on FEVER 2.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
       MYSQL_USER: ${MYSQL_USER:-fakenews_user}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-password}
     ports:
-      - "3306:3306"
+      - '3306:3306'
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -36,7 +36,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD:-password}
       - API_URL=${API_URL:-http://api:8000}
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - ./django:/app
     command: >
@@ -46,8 +46,8 @@ services:
   # FastAPI Application
   api:
     build:
-      context: ./core
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: core/Dockerfile
     restart: always
     depends_on:
       db:
@@ -58,10 +58,9 @@ services:
       - DB_USER=${DB_USER:-fakenews_user}
       - DB_PASSWORD=${DB_PASSWORD:-password}
     ports:
-      - "8001:8000"
+      - '8001:8000'
     volumes:
-      - ./core:/app
-    command: sh -c "pip install -r requirements.txt && python app.py"
+      - ./core:/app/core
 
 volumes:
   mysql_data:
