--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -2,17 +2,26 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy requirements file
-COPY requirements.txt .
+# Expose port
+EXPOSE 8000
+
+# Add project root to PYTHONPATH
+ENV PYTHONPATH=/app
+
+# Copy setup.py pyproject.toml from the project root
+COPY setup.py pyproject.toml /app/
+
+# Copy requirements.txt from the core/ directory
+COPY core/requirements.txt /app/
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+# Copy only the core/ directory into the container
+COPY core/ /app/core/
 
-# Expose port
-EXPOSE 8000
+# Install your package in editable mode
+RUN pip install -e .
 
 # Command to run the application
-CMD ["python", "app.py"]
+CMD ["python", "core/app.py"]
