--- a/core/requirements.txt
+++ b/core/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.12
 httpx==0.27.0
 langchain==0.3.20
 langchain-ollama==0.2.3
+langchain-tavily==0.1.5
 langgraph==0.3.5
 python-dotenv==1.0.1
 pymysql==1.1.1
