--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    env_file:
+      - core/.env
     environment:
       - DB_HOST=${DB_HOST:-db}
       - DB_NAME=${DB_NAME:-fakenews_db}
