--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,14 @@ langchain-ollama==0.2.3
 langgraph==0.3.5
 pytest==8.3.5
 python-dotenv==1.0.1
-wikipedia-api==0.8.1
+numexpr~=2.10.2
+langchain-core~=0.3.45
+typeguard~=4.4.2
+wikipedia~=1.4.0
+wolframalpha~=5.1.3
+beautifulsoup4~=4.13.3
+requests~=2.32.3
+pydantic~=2.10.6
+langsmith~=0.3.15
+pytest~=8.3.5
+setuptools~=78.1.0
