--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,4 @@ langchain-ollama==0.2.3
 langgraph==0.3.5
 pytest==8.3.5
 python-dotenv==1.0.1
-numexpr~=2.10.2
-langchain-core~=0.3.45
-typeguard~=4.4.2
-wikipedia~=1.4.0
-wolframalpha~=5.1.3
-requests~=2.32.3
-pydantic~=2.10.6
-langsmith~=0.3.15
-pytest~=8.3.5
-setuptools~=78.1.0
-numpy~=2.2.4
+wikipedia-api==0.8.1
