--- a/django/.env.example
+++ b/django/.env.example
@@ -10,3 +10,7 @@ EMAIL_PORT=465
 EMAIL_USE_TLS=True
 EMAIL_HOST_USER=support@ashasoftware.com
 EMAIL_HOST_PASSWORD=<password same as info@ email>
+
+# Email verification toggle
+# Set to False to disable email verification for local development
+EMAIL_VERIFICATION_ENABLED=True
