--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,22 +19,53 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.13
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.13"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install -e .
-    - name: Lint with flake8
+    - name: Run linter and comment PR
+      uses: matias-martini/flake8-pr-comments-action@main
+      with:
+          github_token: ${{ github.token }}
+    - name: Run tests with coverage
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        coverage run --branch -m pytest 
+        pytest --cov=your_package --cov-report=term --cov-report=xml:coverage.xml --cov-report=html
+
+    - name: Upload HTML coverage report
+      uses: actions/upload-artifact@v4
+      with:
+        name: html-coverage-report
+        path: htmlcov/
+
+    - name: Post coverage comment
+      uses: MishaKav/pytest-coverage-comment@main
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        pytest-xml-coverage-path: coverage.xml
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Check files using the black formatter
+      uses: rickstaa/action-black@v1
+      id: action_black
+      with:
+        black_args: "."
+    - name: Create Pull Request
+      if: steps.action_black.outputs.is_formatted == 'true'
+    - uses: peter-evans/create-pull-request@v6
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        title: "Format Python code with psf/black push"
+        commit-message: ":art: Format Python code with psf/black"
+        body: |
+          There appear to be some python formatting errors in ${{ github.sha }}. This pull request
+          uses the [psf/black](https://github.com/psf/black) formatter to fix these issues.
+        base: ${{ github.head_ref }} # Creates pull request onto pull request or commit branch
+        branch: actions/black
