--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,6 +45,17 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.13"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest coverage
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -e .
     - name: Run linter and comment PR
       uses: matias-martini/flake8-pr-comments-action@main
       with:
