--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest coverage
+          pip install flake8 pytest pytest-cov coverage
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install -e .
       - name: Run tests with coverage
@@ -41,39 +41,39 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           pytest-xml-coverage-path: coverage.xml
-    lint:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - name: Set up Python 3.13
-          uses: actions/setup-python@v5
-          with:
-            python-version: "3.13"
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install flake8 pytest coverage
-            if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-            pip install -e .
-        - name: Run linter and comment PR
-          uses: matias-martini/flake8-pr-comments-action@main
-          with:
-            github_token: ${{ github.token }}
-        - uses: actions/checkout@v4
-        - name: Check files using the black formatter
-          uses: rickstaa/action-black@v1
-          id: action_black
-          with:
-            black_args: "."
-        - name: Create Pull Request
-          if: steps.action_black.outputs.is_formatted == 'true'
-        - uses: peter-evans/create-pull-request@v7
-          with:
-            token: ${{ secrets.GITHUB_TOKEN }}
-            title: "Format Python code with psf/black push"
-            commit-message: ":art: Format Python code with psf/black"
-            body: |
-              There appear to be some python formatting errors in ${{ github.sha }}. This pull request
-              uses the [psf/black](https://github.com/psf/black) formatter to fix these issues.
-            base: ${{ github.head_ref }} # Creates pull request onto pull request or commit branch
-            branch: actions/black
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest pytest-cov coverage
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -e .
+      - name: Run linter and comment PR
+        uses: matias-martini/flake8-pr-comments-action@main
+        with:
+          github_token: ${{ github.token }}
+      - uses: actions/checkout@v4
+      - name: Check files using the black formatter
+        uses: rickstaa/action-black@v1
+        id: action_black
+        with:
+          black_args: "."
+      - name: Create Pull Request
+        if: steps.action_black.outputs.is_formatted == 'true'
+      - uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Format Python code with psf/black push"
+          commit-message: ":art: Format Python code with psf/black"
+          body: |
+            There appear to be some python formatting errors in ${{ github.sha }}. This pull request
+            uses the [psf/black](https://github.com/psf/black) formatter to fix these issues.
+          base: ${{ github.head_ref }} # Creates pull request onto pull request or commit branch
+          branch: actions/black
