--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
           pip install -e .
       - name: Run tests with coverage
         run: |
-          pytest --cov=your_package --cov-report=term --cov-report=xml:coverage.xml --cov-report=html
+          coverage run --branch -m pytest --cov-report=term --cov-report=xml:coverage.xml --cov-report=html
       - name: Upload HTML coverage report
       - uses: actions/upload-artifact@v4
         with:
