--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,6 +44,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v4
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
@@ -59,7 +60,6 @@ jobs:
         uses: matias-martini/flake8-pr-comments-action@main
         with:
           github_token: ${{ github.token }}
-      - uses: actions/checkout@v4
       - name: Check files using the black formatter
         uses: rickstaa/action-black@v1
         id: action_black
