--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,79 +1,89 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
+  pull-requests: write
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
-      - uses: actions/checkout@v4
-      - name: Set up Python 3.13
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov coverage
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install -e .
-      - name: Run tests with coverage
-        run: |
-          coverage run --branch -m pytest --cov-report=term --cov-report=xml:coverage.xml --cov-report=html
-      - name: Upload HTML coverage report
-      - uses: actions/upload-artifact@v4
-        with:
-          name: html-coverage-report
-          path: htmlcov/
-      - name: Post coverage comment
-      - uses: MishaKav/pytest-coverage-comment@main
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          pytest-xml-coverage-path: coverage.xml
-  lint:
-    runs-on: ubuntu-latest
-    steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
+
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov coverage
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
           pip install -e .
-      - name: Run linter and comment PR
+
+      - name: Run tests with coverage
+        run: |
+          pip install pytest pytest-cov coverage
+          coverage run --branch -m pytest
+          coverage xml -o coverage.xml
+          coverage html
+
+      - name: Upload HTML coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-coverage-report
+          path: htmlcov/
+
+      - name: Post coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          pytest-xml-coverage-path: coverage.xml
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install linting dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 black
+          pip install -e .
+
+      - name: Run Flake8 and comment on PR
         uses: matias-martini/flake8-pr-comments-action@main
         with:
-          github_token: ${{ github.token }}
-      - name: Check files using the black formatter
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check files with black formatter
         uses: rickstaa/action-black@v1
         id: action_black
         with:
           black_args: "."
-      - name: Create Pull Request
+
+      - name: Create Pull Request for Formatting
         if: steps.action_black.outputs.is_formatted == 'true'
-      - uses: peter-evans/create-pull-request@v7
+        uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Format Python code with psf/black push"
+          title: "Format Python code with psf/black"
           commit-message: ":art: Format Python code with psf/black"
           body: |
-            There appear to be some python formatting errors in ${{ github.sha }}. This pull request
-            uses the [psf/black](https://github.com/psf/black) formatter to fix these issues.
-          base: ${{ github.head_ref }} # Creates pull request onto pull request or commit branch
+            There appear to be some Python formatting issues in ${{ github.sha }}. 
+            This pull request fixes these issues using [psf/black](https://github.com/psf/black).
+          base: ${{ github.head_ref }}
           branch: actions/black
