--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -2,12 +2,18 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
+# Configure apt to avoid Hash Sum mismatch errors
+RUN echo "Acquire::http::Pipeline-Depth 0;" > /etc/apt/apt.conf.d/99custom && \
+    echo "Acquire::http::No-Cache true;" >> /etc/apt/apt.conf.d/99custom && \
+    echo "Acquire::BrokenProxy true;" >> /etc/apt/apt.conf.d/99custom
+
+# Install system dependencies with --fix-missing flag
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y --fix-missing \
     default-libmysqlclient-dev \
     build-essential \
     pkg-config \
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
 COPY requirements.txt .
