--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,14 +1,15 @@
 name: Python application
 on:
   push:
-    branches: ["main"]
+    branches: ['main']
   pull_request:
-    branches: ["main"]
+    branches: ['main']
 permissions:
   contents: write
   pull-requests: write
 jobs:
   test:
+    if: false # Disable the test job for now
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,7 +17,7 @@ jobs:
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: '3.13'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -40,6 +41,7 @@ jobs:
           pytest-xml-coverage-path: coverage.xml
 
   lint:
+    if: false # Disable the lint job for now
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -47,7 +49,7 @@ jobs:
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version: '3.13'
       - name: Install linting dependencies
         run: |
           python -m pip install --upgrade pip
@@ -57,19 +59,19 @@ jobs:
         uses: matias-martini/flake8-pr-comments-action@main
         with:
           github_token: ${{ github.token }}
-          plugins: "pep8-naming flake8-functions flake8-pytest-style"
+          plugins: 'pep8-naming flake8-functions flake8-pytest-style'
       - name: Check files with black formatter
         uses: rickstaa/action-black@v1
         id: action_black
         with:
-          black_args: "."
+          black_args: '.'
       - name: Create Pull Request for Formatting
         if: steps.action_black.outputs.is_formatted == 'true'
         uses: peter-evans/create-pull-request@v7
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Format Python code with psf/black"
-          commit-message: ":art: Format Python code with psf/black"
+          title: 'Format Python code with psf/black'
+          commit-message: ':art: Format Python code with psf/black'
           body: |
             There appear to be some Python formatting issues in commit ${{ github.sha }}.
 
@@ -78,4 +80,3 @@ jobs:
             Related PR: #${{ github.event.pull_request.number }}
           base: ${{ github.head_ref }}
           branch: actions/black
-
