--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,9 +11,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-      - name: Build the Docker image
-        run: docker build . --file django/Dockerfile --tag my-image-name:$(date +%s)
-
+      - uses: actions/checkout@v4.2.2
+      - name: Run docker compose
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: "docker-compose.yml"
+      - name: Execute tests in the running services
+        run: |
+          docker compose exec app python -m pytest tests/
