--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
+      - name: Create stub .env file
+      - run: touch core/.env
       - name: Run docker compose
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
