--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,6 @@ jobs:
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: "docker-compose.yml"
-      - name: Execute tests in the running services
-        run: |
-          docker compose exec app python -m pytest tests/
+#      - name: Execute tests in the running services
+#        run: |
+#          docker compose exec app python -m pytest tests/
