--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Install linting dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 black flake8-pytest-style pep8-naming flake8-functions
+          pip install flake8 black==24.4.2 flake8-pytest-style pep8-naming flake8-functions
           pip install -e .
       - name: Run linter and comment PR
         uses: matias-martini/flake8-pr-comments-action@main
