--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,15 +9,14 @@ permissions:
   pull-requests: write
 jobs:
   test:
-    if: false # Disable the test job for now
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.13
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.11'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -41,19 +40,18 @@ jobs:
           pytest-xml-coverage-path: coverage.xml
 
   lint:
-    if: false # Disable the lint job for now
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Set up Python 3.13
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.11'
       - name: Install linting dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 black flake8-pytest-style pep8-naming flake8-functions
+          pip install flake8 black==24.4.2 flake8-pytest-style pep8-naming flake8-functions
           pip install -e .
       - name: Run linter and comment PR
         uses: matias-martini/flake8-pr-comments-action@main
