adding .sh files and making changes with main.tf

--- a/k8s/base/deployments/django.yaml
+++ b/k8s/base/deployments/django.yaml
@@ -70,7 +70,7 @@ spec:
           periodSeconds: 2
           timeoutSeconds: 1
         command:
-        - sh
+        - /bin/bash
         - -c
         - |
           python manage.py migrate &&
