--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && apt-get install -y \
     default-libmysqlclient-dev \
     build-essential \
     pkg-config \
+    bash \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
