--- a/k8s/base/services/api.yaml
+++ b/k8s/base/services/api.yaml
@@ -3,6 +3,9 @@ kind: Service
 metadata:
   name: api
   namespace: newsagent
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 spec:
   selector:
     app: newsagent
@@ -11,4 +14,4 @@ spec:
   - port: 8001
     targetPort: 8000
     name: http
-  type: ClusterIP
+  type: LoadBalancer
