--- a/k8s/base/configmaps/app-config.yaml
+++ b/k8s/base/configmaps/app-config.yaml
@@ -19,7 +19,7 @@ data:
   VERDICT_AGENT_MODEL: "mistral-nemo"
   
   # Ollama configuration
-  OLLAMA_BASE_URL: "http://44.246.197.141:11434"
+  OLLAMA_BASE_URL: "http://${OLLAMA_PUBLIC_IP}:11434"
   
   # LangChain configuration
   LANGCHAIN_PROJECT: "newsagent"
