--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -28,4 +28,4 @@ COPY . .
 EXPOSE 8000
 
 # Command to run the application
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python", "django/manage.py", "runserver", "0.0.0.0:8000"]
