--- a/k8s/django-deployment.yaml
+++ b/k8s/django-deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: newsagent
   labels:
     app: newsagent-django
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 spec:
   type: LoadBalancer
   ports:
