--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run tests with coverage
         run: |
           pip install pytest pytest-cov coverage
-          coverage run --branch -m pytest
+          coverage run --branch -m pytest tests/static
           coverage xml -o coverage.xml
           coverage html
       - name: Upload HTML coverage report
