--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore training/eval datasets 
 datasets/
 
+# Ignore secrets
+secrets.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
