--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore training/eval datasets 
+# Ignore training/eval datasets and result files
 datasets/
+**/evaluation/*.jsonl
 
 # Ignore secrets
 secrets.yaml
