--- a/k8s/base/secrets/app-secrets.template.yaml
+++ b/k8s/base/secrets/app-secrets.template.yaml
@@ -23,3 +23,9 @@ stringData:
   AWS_ACCESS_KEY_ID: "your-aws-access-key-id"
   AWS_SECRET_ACCESS_KEY: "your-aws-secret-access-key"
   AWS_REGION: "your-aws-region"
+  
+  # LLM model settings
+  CLAIM_DECOMPOSER_MODEL: "mistral-nemo"
+  RESEARCH_AGENT_MODEL: "mistral-nemo"
+  REASONING_AGENT_MODEL: "mistral-nemo"
+  VERDICT_AGENT_MODEL: "mistral-nemo"
